// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Badge baseVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    红点徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
      >
        <div
          class="t-badge__count"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          class="t-icon t-icon-notification"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="notification"
          >
            <path
              d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
              fill="transparent"
              id="fill2"
            />
            <g
              id="stroke1"
            >
              <path
                d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </g>
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="left: calc(100% + 1px); top: -1px;"
      >
        <div
          class="t-badge__count"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="left: calc(100% + 1px); top: 1px;"
      >
        <div
          class="t-badge__count"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    数字徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="left: calc(100% + 4px);"
      >
        <div
          class="t-badge__count"
        >
          8
        </div>
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          class="t-icon t-icon-notification"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="notification"
          >
            <path
              d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
              fill="transparent"
              id="fill2"
            />
            <g
              id="stroke1"
            >
              <path
                d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </g>
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="left: calc(100% + 2px); top: -2px;"
      >
        <div
          class="t-badge__count"
        >
          8
        </div>
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="left: calc(100% + 2px); top: 2px;"
      >
        <div
          class="t-badge__count"
        >
          8
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    自定义徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="通知"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-notification"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="notification"
            >
              <path
                d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </g>
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="top: 2px;"
      >
        <div
          class="t-badge__count"
        >
          NEW
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          红点徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
            >
              <div
                class="t-badge__count"
              >
                <!---->
              </div>
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                class="t-icon t-icon-notification"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="notification"
                >
                  <path
                    d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </g>
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="left: calc(100% + 1px); top: -1px;"
            >
              <div
                class="t-badge__count"
              >
                <!---->
              </div>
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="left: calc(100% + 1px); top: 1px;"
            >
              <div
                class="t-badge__count"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          数字徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="left: calc(100% + 4px);"
            >
              <div
                class="t-badge__count"
              >
                8
              </div>
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                class="t-icon t-icon-notification"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="notification"
                >
                  <path
                    d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </g>
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="left: calc(100% + 2px); top: -2px;"
            >
              <div
                class="t-badge__count"
              >
                8
              </div>
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="left: calc(100% + 2px); top: 2px;"
            >
              <div
                class="t-badge__count"
              >
                8
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          自定义徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="通知"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-notification"
                  fill="none"
                  height="1em"
                  style="fill: none; font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="notification"
                  >
                    <path
                      d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
                      fill="transparent"
                      id="fill1"
                    />
                    <path
                      d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                      <path
                        d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </g>
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="top: 2px;"
            >
              <div
                class="t-badge__count"
              >
                NEW
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          圆形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                class="t-icon t-icon-notification"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="notification"
                >
                  <path
                    d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </g>
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="left: calc(100% + 2px); top: -2px;"
            >
              <div
                class="t-badge__count"
              >
                8
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          方形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                class="t-icon t-icon-notification"
                fill="none"
                height="1em"
                style="fill: none; font-size: 24px;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="notification"
                >
                  <path
                    d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <g
                    id="stroke1"
                  >
                    <path
                      d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </g>
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
              style="left: calc(100% + 1px); top: -2px;"
            >
              <div
                class="t-badge__count"
              >
                8
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          气泡徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="商店"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-shop"
                  fill="none"
                  height="1em"
                  style="fill: none; font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="shop"
                  >
                    <path
                      d="M4 8H20V22H4V8Z"
                      fill="transparent"
                      id="fill1"
                    />
                    <path
                      d="M15.5 11V5.5C15.5 3.567 13.933 2 12 2C10.067 2 8.5 3.567 8.5 5.5V11M4 8H20V22H4V8Z"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
            >
              <div
                class="t-badge__count"
              >
                领取积分
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
          style="margin-bottom: 16px;"
        >
          角标
        </div>
        <div
          class="t-cell"
        >
          <div
            class="t-cell__left"
          >
            <!---->
            <!---->
          </div>
          <div
            class="t-cell__title"
          >
            <div
              class="t-cell__title-text"
            >
              单行标题
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__ribbon-left-outer"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--ribbon-left t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  NEW
                </div>
              </div>
            </div>
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell"
        >
          <div
            class="t-cell__left"
          >
            <!---->
            <!---->
          </div>
          <div
            class="t-cell__title"
          >
            <div
              class="t-cell__title-text"
            >
              单行标题
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__ribbon-outer"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  NEW
                </div>
              </div>
            </div>
            
          </div>
          <!---->
        </div>
        <div
          class="summary"
          style="margin-bottom: 16px;"
        >
          三角角标
        </div>
        <div
          class="t-cell"
        >
          <div
            class="t-cell__left"
          >
            <!---->
            <!---->
          </div>
          <div
            class="t-cell__title"
          >
            <div
              class="t-cell__title-text"
            >
              单行标题
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__triangle-left-outer"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--triangle-left t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  NEW
                </div>
              </div>
            </div>
            
          </div>
          <!---->
        </div>
        <div
          class="t-cell"
        >
          <div
            class="t-cell__left"
          >
            <!---->
            <!---->
          </div>
          <div
            class="t-cell__title"
          >
            <div
              class="t-cell__title-text"
            >
              单行标题
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__triangle-right-outer"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--triangle-right t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  NEW
                </div>
              </div>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件尺寸
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          Large
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--large t-avatar--circle"
                  >
                    <div
                      class="t-avatar__icon"
                    >
                      <svg
                        class="t-icon t-icon-user"
                        fill="none"
                        height="1em"
                        style="fill: none; font-size: 24px;"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <g
                          id="user"
                        >
                          <g
                            id="fill1"
                          >
                            <path
                              d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                              fill="transparent"
                            />
                            <path
                              d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                              fill="transparent"
                            />
                          </g>
                          <g
                            id="stroke1"
                          >
                            <path
                              d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                              stroke="currentColor"
                              stroke-linecap="square"
                              stroke-width="2"
                            />
                            <path
                              d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                              stroke="currentColor"
                              stroke-linecap="square"
                              stroke-width="2"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                  </div>
                  
                </div>
                <div
                  class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
                  style="left: calc(100% + 7px); top: 7px;"
                >
                  <div
                    class="t-badge__count"
                  >
                    8
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          Medium
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--medium t-avatar--circle"
                  >
                    <div
                      class="t-avatar__icon"
                    >
                      <svg
                        class="t-icon t-icon-user"
                        fill="none"
                        height="1em"
                        style="fill: none; font-size: 24px;"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <g
                          id="user"
                        >
                          <g
                            id="fill1"
                          >
                            <path
                              d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                              fill="transparent"
                            />
                            <path
                              d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                              fill="transparent"
                            />
                          </g>
                          <g
                            id="stroke1"
                          >
                            <path
                              d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                              stroke="currentColor"
                              stroke-linecap="square"
                              stroke-width="2"
                            />
                            <path
                              d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                              stroke="currentColor"
                              stroke-linecap="square"
                              stroke-width="2"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                  </div>
                  
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  style="left: calc(100% + 5px); top: 5px;"
                >
                  <div
                    class="t-badge__count"
                  >
                    8
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Badge > Badge sizeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    Large
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar__wrapper"
    >
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            <div
              class="t-avatar t-avatar--large t-avatar--circle"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  style="fill: none; font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="user"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                        fill="transparent"
                      />
                      <path
                        d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                        fill="transparent"
                      />
                    </g>
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                      <path
                        d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
            
          </div>
          <div
            class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
            style="left: calc(100% + 7px); top: 7px;"
          >
            <div
              class="t-badge__count"
            >
              8
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    Medium
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar__wrapper"
    >
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            <div
              class="t-avatar t-avatar--medium t-avatar--circle"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  style="fill: none; font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="user"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                        fill="transparent"
                      />
                      <path
                        d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                        fill="transparent"
                      />
                    </g>
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                      <path
                        d="M20 21V19C20 16.7909 18.2091 15 16 15H8C5.79086 15 4 16.7909 4 19V21H20Z"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
            
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
            style="left: calc(100% + 5px); top: 5px;"
          >
            <div
              class="t-badge__count"
            >
              8
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge themeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    圆形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          class="t-icon t-icon-notification"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="notification"
          >
            <path
              d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
              fill="transparent"
              id="fill2"
            />
            <g
              id="stroke1"
            >
              <path
                d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </g>
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="left: calc(100% + 2px); top: -2px;"
      >
        <div
          class="t-badge__count"
        >
          8
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    方形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          class="t-icon t-icon-notification"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="notification"
          >
            <path
              d="M3 19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8V13L3 16V19Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M12 22.5C13.933 22.5 15.5 20.933 15.5 19H8.5C8.5 20.933 10.067 22.5 12 22.5Z"
              fill="transparent"
              id="fill2"
            />
            <g
              id="stroke1"
            >
              <path
                d="M5 8V13L3 16V19H21V16L19 13V8C19 4.13401 15.866 1 12 1C8.13401 1 5 4.13401 5 8Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M8.5 19H15.5C15.5 20.933 13.933 22.5 12 22.5C10.067 22.5 8.5 20.933 8.5 19Z"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </g>
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
        style="left: calc(100% + 1px); top: -2px;"
      >
        <div
          class="t-badge__count"
        >
          8
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    气泡徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="商店"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-shop"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="shop"
            >
              <path
                d="M4 8H20V22H4V8Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M15.5 11V5.5C15.5 3.567 13.933 2 12 2C10.067 2 8.5 3.567 8.5 5.5V11M4 8H20V22H4V8Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
      >
        <div
          class="t-badge__count"
        >
          领取积分
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
    style="margin-bottom: 16px;"
  >
    角标
  </div>
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        单行标题
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge t-badge__ribbon-left-outer"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--ribbon-left t-badge--count t-has-count"
        >
          <div
            class="t-badge__count"
          >
            NEW
          </div>
        </div>
      </div>
      
    </div>
    <!---->
  </div>
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        单行标题
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge t-badge__ribbon-outer"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
        >
          <div
            class="t-badge__count"
          >
            NEW
          </div>
        </div>
      </div>
      
    </div>
    <!---->
  </div>
  <div
    class="summary"
    style="margin-bottom: 16px;"
  >
    三角角标
  </div>
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        单行标题
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge t-badge__triangle-left-outer"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--triangle-left t-badge--count t-has-count"
        >
          <div
            class="t-badge__count"
          >
            NEW
          </div>
        </div>
      </div>
      
    </div>
    <!---->
  </div>
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        单行标题
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge t-badge__triangle-right-outer"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--triangle-right t-badge--count t-has-count"
        >
          <div
            class="t-badge__count"
          >
            NEW
          </div>
        </div>
      </div>
      
    </div>
    <!---->
  </div>
</div>
`;
